--- a/app/entrypoint/player/index.html
+++ b/app/entrypoint/player/index.html
@@ -5,11 +5,10 @@
     <link rel="manifest" href="../../manifest.json">
     <script src="../../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../../../node_modules/web-animations-js/web-animations-next-lite.min.js"></script>
-    <script type="module" src="../../style/dashboard-style.js" crossorigin></script>
+    <script type="module" src="../../style/player-style.js" crossorigin></script>
     <script type="module" src="src/boot.js" crossorigin></script>
-    <script type="module" src="../../elements/layout/dsign-layout.js" crossorigin></script>
 </head>
 <body>
-    <dsign-layout section="dashboard" services='{"Application":"Application"}'></dsign-layout>
+    <paper-player-manager></paper-player-manager>
 </body>
 </html>
