--- a/app/development/dashboard/index.html
+++ b/app/development/dashboard/index.html
@@ -29,6 +29,7 @@
     </script>
 </head>
 <body>
-    <dsign-layout section="monitor" services='{"Application":"Application","StorageContainerAggregate": {"MonitorStorage":"MonitorStorage"} }'></dsign-layout>
+    <dsign-layout section="resource" services='{"Application":"Application","StorageContainerAggregate": {"MonitorStorage":"MonitorStorage"} }'></dsign-layout>
+    <paper-toast id="notification"></paper-toast>
 </body>
 </html>
