Add notification service

--- a/app/entrypoint/dashboard/index.html
+++ b/app/entrypoint/dashboard/index.html
@@ -11,5 +11,6 @@
 </head>
 <body>
     <dsign-layout section="dashboard" services='{"Application":"Application"}'></dsign-layout>
+    <paper-toast id="notification"></paper-toast>
 </body>
 </html>
