--- a/app/development/dashboard/index.html
+++ b/app/development/dashboard/index.html
@@ -29,7 +29,7 @@
     </script>
 </head>
 <body>
-    <dsign-layout section="timeslot" services='{"Application":"Application","StorageContainerAggregate": {"MonitorStorage":"MonitorStorage"} }'></dsign-layout>
+    <dsign-layout section="dashboard" services='{"Application":"Application","StorageContainerAggregate": {"MonitorStorage":"MonitorStorage"} }'></dsign-layout>
     <paper-toast id="notification"></paper-toast>
 </body>
 </html>
