--- a/app/entrypoint/dashboard/index.html
+++ b/app/entrypoint/dashboard/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="manifest" href="../../manifest.json">
-    <script src="../../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-    <script src="../../../node_modules/web-animations-js/web-animations-next-lite.min.js"></script>
+    <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="../../node_modules/web-animations-js/web-animations-next-lite.min.js"></script>
     <script type="module" src="../../style/dashboard-style.js" crossorigin></script>
     <script type="module" src="src/boot.js" crossorigin></script>
     <script type="module" src="../../elements/layout/application-layout.js" crossorigin></script>
+    <script type="module" src="../../node_modules/@polymer/paper-toast/paper-toast.js" crossorigin></script>
 </head>
 <body>
     <paper-toast id="notification"></paper-toast>
