--- a/app/development/player/index.html
+++ b/app/development/player/index.html
@@ -5,6 +5,7 @@
     <link rel="manifest" href="../../manifest.json">
     <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../../node_modules/web-animations-js/web-animations-next-lite.min.js"></script>
+    <script src="../../node_modules/js-acl/dist/acl.js"></script>
     <script>
         require('@babel/register')({
             presets: [
