--- a/app/entrypoint/dashboard/index.html
+++ b/app/entrypoint/dashboard/index.html
@@ -6,9 +6,7 @@
     <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../../node_modules/web-animations-js/web-animations-next-lite.min.js"></script>
     <script type="module" src="../../style/dashboard-style.js" crossorigin></script>
-    <script type="module" src="src/boot.js" crossorigin></script>
-    <script type="module" src="../../elements/layout/application-layout.js" crossorigin></script>
-    <script type="module" src="../../node_modules/@polymer/paper-toast/paper-toast.js" crossorigin></script>
+    <script src="../../node_modules/js-acl/dist/acl.js"></script>
 </head>
 <body>
     <paper-toast id="notification"></paper-toast>
